# raytracing

./: .clang-format-ignore  .clangd  .gitattributes  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: raytracing_ci.yml
.zed/: settings.json  tasks.json
docs/: .gitattributes  10-70p.ppm  10-90p.ppm  11-50p.ppm  11-70p.ppm  12.ppm  13.ppm  16.ppm  8.ppm  progress-over-time.md
docs/images/: 10-10p.ppm  10-30p.ppm  11-10p.ppm  11-30p.ppm  11-90p.ppm  14.ppm  15.ppm  17.ppm  18.ppm  19.ppm  20.ppm  22.ppm  23.ppm  24.ppm  26.ppm  27.ppm  28.ppm  29.ppm  30.ppm  31.ppm  32.ppm  33.ppm  34.ppm  35.ppm  36.ppm  37.ppm  38.ppm  39.ppm  9.ppm
images/: .gitattributes
include/raytracing/: aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
src/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt  test_camera.cpp  test_color.cpp  test_interval.cpp  test_main.cpp  test_material.cpp  test_ray.cpp  test_rtweekend.cpp  test_vec3.cpp
